Closed Bug 1446588 Opened 7 years ago Closed 7 years ago

Crash when switching the devtools panel to an own window and back to normal

Categories

(Core :: Graphics: WebRender, defect)

x86_64
All
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- unaffected
firefox60 --- unaffected
firefox61 --- disabled

People

(Reporter: jan, Assigned: jrmuizel)

References

(Blocks 1 open bug, )

Details

(Keywords: crash, nightly-community)

Crash Data

Attachments

(2 files)

Attached video 2018-03-17_03-27-48.mp4
1. F12 Open Devtools 2. pop it out to a window 3. put it back to its normal position I think it's important that the Javascript console is opened and has some text. I did always the same STR, but on different websites at the beginning (I think I was successful on YouTube). Screencast 0m20s: Notice the moment when the standalone devtools window lost its icons for a moment. 20180316220124 fresh profile: layers.gpu-process.force-enabled, gfx.webrender.all https://www.facebook.com bp-dd6d4115-1afc-44aa-b1c7-a4ec10180317 17.03.18 03:44 [@ mozilla::layers::WebRenderCommandBuilder::Destroy ] > MOZ_RELEASE_ASSERT(mWebRenderUserDatas.Count() == 0) browser crash, even with a gpu process 20180316220124 fresh profile: gfx.webrender.all https://www.facebook.com bp-7eedfa98-4182-4967-95a3-129600180317 17.03.18 03:40 [@ mozilla::layers::WebRenderCommandBuilder::Destroy ] > MOZ_RELEASE_ASSERT(mWebRenderUserDatas.Count() == 0) 20180316220124 fresh profile: gfx.webrender.all https://www.facebook.com bp-4b2cd1a1-f29b-41f9-b14e-79a310180317 17.03.18 03:38 [@ mozilla::layers::WebRenderCommandBuilder::Destroy ] > MOZ_RELEASE_ASSERT(mWebRenderUserDatas.Count() == 0) 20180316220124 fresh profile: layers.gpu-process.force-enabled, gfx.webrender.all bp-b5dc1edb-e090-4f58-ad31-5058f0180317 17.03.18 03:28 [@ mozalloc_abort | abort | core::option::expect_failed | webrender::resource_cache::ResourceCache::get_cached_image > Didn't find a cached resource with that ID! I think this one was the screencast: 20180316220124 fresh profile: gfx.webrender.all https://www.facebook.com bp-90c6b02a-c86f-42eb-b6b7-ab1e70180317 17.03.18 03:27 [@ mozalloc_abort | abort | core::option::expect_failed | webrender::resource_cache::ResourceCache::get_cached_image ] > Didn't find a cached resource with that ID! 20180316220124 fresh profile: layers.gpu-process.force-enabled, gfx.webrender.all, layers.omtp.enabled bp-471d7e6a-7ac2-49a7-9869-7f3ab0180317 17.03.18 03:23 [@ mozilla::layers::WebRenderCommandBuilder::Destroy ] > MOZ_RELEASE_ASSERT(mWebRenderUserDatas.Count() == 0) 20180316100132 main profile bp-775c3ec5-719a-4b64-b431-ba0d30180317 17.03.18 03:10 [@ mozilla::layers::WebRenderCommandBuilder::Destroy ] > MOZ_RELEASE_ASSERT(mWebRenderUserDatas.Count() == 0) 20180316100132 main profile bp-15019d44-3915-4873-88f4-367770180317 17.03.18 03:09 [@ mozilla::layers::WebRenderCommandBuilder::Destroy ] > MOZ_RELEASE_ASSERT(mWebRenderUserDatas.Count() == 0) > popped the devtools area into a seperate window and back to normal
Blocks: 1446166
Jeff, regression from your change. Seems to have STR, can you take a look?
Flags: needinfo?(jmuizelaar)
Yep.
Assignee: nobody → jmuizelaar
I can't reproduce this. What window manager are you using?
Flags: needinfo?(jmuizelaar) → needinfo?(jan)
(In reply to Jeff Muizelaar [:jrmuizel] from comment #3) > I can't reproduce this. What window manager are you using? I don't know. I installed Debian Testing with KDE. But I can also reproduce on Windows 10: It's exactly as shown in attachment 8959754 [details]: 1. open https://www.facebook.com 2. press F12 3. Click on "Console" 4. Press F5 and click on the button to pop out devtools into an own window Should trigger a browser crash. Restart. 1. Click on the button to move devtools to its normal posititon 2. pop it out 3. back to normal 4. pop it out 5. back to normal Devtools is opened as own window and has lost its icons. bp-fc4f1f8e-0d8c-4cc1-98f5-ebaa70180319 19.03.2018 21:55 [@ static void std::panicking::rust_panic_with_hook ] > Didn't find a cached resource with that ID! bp-eafe25ea-796f-4811-9aa2-16a630180319 19.03.2018 21:55 [@ mozilla::layers::WebRenderCommandBuilder::Destroy ] > MOZ_RELEASE_ASSERT(mWebRenderUserDatas.Count() == 0)
Flags: needinfo?(jan)
OS: Linux → All
I mean: 6. repeat until it is opened in an own window and has lost its icons.
I was able to reproduce somewhat on Windows
Comment on attachment 8960766 [details] Bug 1446588. Remove the WRUserDatas when document changes Window. https://reviewboard.mozilla.org/r/229510/#review235234
Attachment #8960766 - Flags: review?(bugmail) → review+
Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7f5785b89790 Remove the WRUserDatas when document changes Window. r=kats
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
See Also: → 1455597
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: