Bug 1446588. Remove the WRUserDatas when document changes Window. r=kats

We can have our LayerManager changed on us when document changes window.
(Tab drag, dev tools pop-out). We need to make sure we clear our
WebRenderUserData in that case. This hooks into the existing mechanism
that does this for DisplayItemData.

MozReview-Commit-ID: 8aoOBGOP5Wx